--- a/index.html
+++ b/index.html
@@ -1,103 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@800&family=Outfit:wght@400;700&family=Poppins&display=swap');
-        *{
-            margin:0;
-            padding:0;
+    <title>Frontend Mentor | QR code component</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@800&family=Outfit:wght@400;700&family=Poppins&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
             box-sizing: border-box;
         }
-        body{
+
+        body {
             background-color: hsl(212, 45%, 89%);
-            width:100%;
-            max-width:1440px;
-            height:100vh;
+            /* width: 100%; */
+            /* max-width: 1440px; */
+            /* height: 100vh; */
             font-family: Outfit;
         }
-        .center{
-            position:absolute;
-            top:50%;
-            left:50%;
-            transform: translate(-50%, -50%);
-            background-color:hsl(0, 0%, 100%);
-            width:310px;
-            height:485px;
-            border-radius:20px;
+        #menu {
+            position: relative;
+            width: 100%;
+            height: 95vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-bottom: 3px dashed #2b7efa;
+            
+
         }
-        .center .img{
-            display:flex;
+        .first {
+            background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+        }
+        .second {
+            background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+        }
+        .third {
+            background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+            border-bottom: none!important;
+        }
+        .center {
+            /* position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); */
+            background-color: hsl(0, 0%, 100%);
+            width: 310px;
+            height: 415px;
+            border-radius: 20px;
+        }
+
+        .center .img {
+            display: flex;
             align-items: center;
             justify-content: center;
-            margin-top:17px;
+            margin-top: 17px;
         }
-        .center .img img{
-            width:280px;
-            border-radius:20px;
+
+        .center .img img {
+            width: 280px;
+            border-radius: 20px;
         }
-        .center .improve{
-            margin-top:19px;
+
+        .center .improve {
+            margin-top: 19px;
         }
-        .center h2{
+
+        .center h2 {
             font-family: Outfit;
-            font-weight:700;
-            color:hsl(218, 44%, 22%);
-            text-align:center;
-            padding:0 16px;
+            font-weight: 700;
+            color: hsl(218, 44%, 22%);
+            text-align: center;
+            padding: 0 16px;
         }
-        .center .scan{
-            margin-top:19px;
+
+        .center .scan {
+            margin-top: 19px;
         }
-        .center p{
+
+        .center p {
             font-family: Outfit;
-            font-size:15px;
-            font-weight:400;
-            color:hsl(220, 15%, 55%);
-            text-align:center;
-            padding:0 23px;
+            font-size: 15px;
+            font-weight: 400;
+            color: hsl(220, 15%, 55%);
+            text-align: center;
+            padding: 0 23px;
         }
-        @media (max-width:375px){
-            body{
-                max-width:375px;
+
+        @media (max-width:375px) {
+            body {
+                max-width: 375px;
             }
         }
-    .attribution { 
-                  font-size: 11px;
-                  text-align: center;
-                  position:absolute;
+
+        .attribution {
+            font-size: 12pt;
+            padding: .5em;
+            text-align: center;
+            /* position:absolute;
                   top:95%;
                   left:25%;
-                  right:25%;
-                }
-    .attribution a {
-                  color: hsl(228, 45%, 44%); 
-          }
-  </style>
+                  right:25%; */
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+            text-decoration: none;
+        }
+        .attribution a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
+
 <body>
-    <div class="center">
-      <div class="img">
-          <img src="images/image-qr-code.png">
-      </div>
-      <div class="improve">
-          <h2>Improve your front-end skills by building projects</h2>
-      </div>
-      <div class="scan">
-          <p>Scan the QR code to visit Fontend Mentor and take your coding skills to the next level</p>
-      </div>
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ronald Roll</a>.
-  </div>
+    <section id="menu" class="first">
+        <div class="center">
+            <div class="img">
+                <img src="/QR-code/qr1.png">
+            </div>
+            <div class="improve">
+                <h2>ABC Resturant</h2>
+            </div>
+            <div class="scan">
+                <p>Scan the QR code to see menu page</p>
+            </div>
+        </div>
+    </section>
+    <section id="menu" class="second">
+        <div class="center">
+            <div class="img">
+                <img src="/QR-code/qr2.png">
+            </div>
+            <div class="improve">
+                <h2>XYZ Food Hub</h2>
+            </div>
+            <div class="scan">
+                <p>Scan the QR code to see menu page</p>
+            </div>
+        </div>
+    </section>
+    <section id="menu" class="third">
+        <div class="center">
+            <div class="img">
+                <img src="/QR-code/qr3.png">
+            </div>
+            <div class="improve">
+                <h2>Delhi Fast Food</h2>
+            </div>
+            <div class="scan">
+                <p>Scan the QR code to see menu page</p>
+            </div>
+        </div>
+    </section>
+    <div class="attribution">
+        Coded by <a href="ningsangjabegu.com.np" target="_blank">Ningsang Jabegu</a>.
+    </div>
 </body>
+
 </html>
